syntax = "proto3";

package xgrpcd;

option go_package="fancy_painter/";

import "google/api/annotations.proto";            // 支持http的时候，需要增加注解的功能，需要这个东西来进行解析
import "fancy_common/fancy_common.proto";          // 引用公共pb文件

message UserLoginReq {
	string token = 1;        // 支持的token
}

message UserInfo {
	string user_id = 1;        // 用户id
	string phone_number = 2;   // 电话号码
}

message UserLoginRsp {
	int32 ret_code = 1;
	string ret_msg = 2;
	string user_id = 3;        // 内部用户id
}

//请求
message UserReq {
	int32 id = 1;
}

//响应
message UserRsp {
	string name = 1;
}


//绘制图片请求
message SmartDrawImgReq {
	string phone_number = 1;                            // 电话号码
	string user_id = 2;                                 // 内部用户id，类似秘钥
	fancycommon.SmartDrawImgTask smart_draw_img_task = 3;           // 智能画图任务
}

//绘制图片响应
message SmartDrawImgRsp {
	int32 ret_code = 1;
	string ret_msg = 2;
}


//服务
service FancyPainter {
	// 测试接口
	rpc GetUser(UserReq) returns (UserRsp){
		option (google.api.http) = {        // 声明http的定义方式！！
			get: "/fancy_painter/get_user"
			// body: "*"                     // get方法的时候，不能有body字段
		};
	}

	// 用户登录接口
	rpc UserLogin(UserLoginReq) returns (UserLoginRsp){
		option (google.api.http) = {        // 声明http的定义方式！！
			post: "/fancy_painter/user_login"
			body: "*"                     // 要传递数据过来，只能使用post方法！！
		};
	}


	// SmartDrawImg 智能图片生成接口
	rpc SmartDrawImg(SmartDrawImgReq) returns (SmartDrawImgRsp){
		option (google.api.http) = {        // 声明http的定义方式！！
			post: "/fancy_painter/smart_draw_img"
			body: "*"                     // 要传递数据过来，只能使用post方法！！
		};
	}
}



